<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">川大飞扬</string>
    <string name="z">hello world</string>
    <string name="empty"></string>
    
    <!-- main_about -->
    <string name="about_author">\n开发者：飞扬研发-冰雪一舟\n</string>
        					
    <string name="about_version">版本号:v1.4.0</string>
        					
    <string name="about_email">\n反馈邮箱:1229095766@qq.com</string>
     
    <string name="about_more">\t\n如遇问题请给开发者反馈问题，
        					\n你的支持就是我们的进步</string>
     
        					
    <!-- main_view -->
    <string name="main_app">应用</string>
    <string name="main_account">账户</string>
    <string name="main_setting">设置</string>
    
    <!-- mview_setting -->
    <string name="about">关于</string>
    
    <!-- mview_account -->
    <string name="the_jwc_id">账号绑定</string>
    <string name="student_num">学号</string>
    <string name="password">密码</string>
    <string name="login">绑定</string>
    <string name="reset">重置</string>
    <string name="calculate">计算绩点</string>
    <string name="remember_id">记住账号</string>
    <string name="ato_login">自动校验</string>
    
    <!-- mview_app -->
    <string name="grade_all">查询成绩</string>
    <string name="grade_cal">绩点计算</string>
    <string name="app_cmd">命令操作符</string>
    
    <!-- mapp_allgrade -->
    <string name="the_grade_list">所有成绩</string>
    
    <!-- mapp_cmd -->
    <string name="app_cmd_first">冰雪一舟</string>
    <string name="app_cmd_edit_hint">请输入命令符</string>
    
    <!-- mapp_evaluation -->
    <string name="app_evaluation">一键评教</string>
    <string name="app_eval_detail">评教详情</string>
    
    <!-- mapp_evaluation -->
    <string name="app_gpa">绩点计算</string>
    <string name="app_gpa_copyright">[飞扬官网出品]</string>

</resources>
