<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="#ffdddddd"
  			android:gravity="center_horizontal|center_vertical"  >  
			<TextView
			 		android:layout_width="wrap_content" 
			  		android:layout_height="wrap_content" 
			  		android:text="@string/app_cmd"
			   		android:textSize="20sp"		
					android:textColor="#ffff0000" />       
	</LinearLayout>
	
    <LinearLayout
  			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:background="#ffdddddd"
  			android:orientation="vertical"
  			>

        
		<ScrollView
		    android:layout_width="fill_parent"
		    android:layout_height="0dip"
		    android:layout_weight="10"
		    android:background="#ff000000" >

		    <TextView
		        android:id="@+id/cmd_tV_content"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#ffffffff"
		        android:text="@string/app_cmd_first"
		        android:textSize="12sp"/>
	    </ScrollView>
	    
		
        <EditText
            android:id="@+id/cmd_eT_input"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:hint="@string/app_cmd_edit_hint"
            android:ems="10" >

            <requestFocus
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </EditText>
     
    </LinearLayout>
	
</LinearLayout>
