<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="#ffdddddd"
  			android:gravity="center_horizontal|center_vertical"  >  
     <TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/main_app"
        		android:textSize="20sp"		
				android:textColor="#ffff0000" />       
	</LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_app"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
           <RelativeLayout
                android:id="@+id/item_cliked_allGrade"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"
	       		android:layout_marginTop="14dp"
	       		android:gravity="center_vertical"
	       		android:clickable="true"
	       		android:background="@drawable/preference_single_item" >
	       		<TextView
	   				android:layout_width="wrap_content" 
	   				android:layout_height="wrap_content"
	   				android:padding="8dp" 
	   				android:text="@string/grade_all"
	   				android:textSize="17sp"		
					android:textColor="#000" />
	       		<ImageView
	       		    android:contentDescription="@string/z"
	       			android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"        	     	
	   				android:scaleType="matrix"
	   				android:layout_centerVertical="true"
	   				android:layout_alignParentRight="true"
	   				android:clickable="true"
	   				android:src="@drawable/mm_submenu" />      					
     		</RelativeLayout>
     		
     		<RelativeLayout
                android:id="@+id/item_cliked_tools"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"
	       		android:layout_marginTop="14dp"
	       		android:gravity="center_vertical"
	       		android:clickable="true"
	       		android:background="@drawable/preference_single_item" >
	       		<TextView
	   				android:layout_width="wrap_content" 
	   				android:layout_height="wrap_content"
	   				android:padding="8dp" 
	   				android:text="@string/app_cmd"
	   				android:textSize="17sp"		
					android:textColor="#000" />
	       		<ImageView
	       		    android:contentDescription="@string/z"
	       			android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"        	     	
	   				android:scaleType="matrix"
	   				android:layout_centerVertical="true"
	   				android:layout_alignParentRight="true"
	   				android:clickable="true"
	   				android:src="@drawable/mm_submenu" />      					
     		</RelativeLayout>
     		
        </LinearLayout>
    </ScrollView>
</LinearLayout>
