<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/mapp_eval_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mapp_eval_main_tV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

        <Button
            android:id="@+id/mapp_eval_main_bu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_evaluation" />

    </LinearLayout>
    
    <LinearLayout
  			android:id="@+id/mapp_eval_title"
  			android:layout_width="fill_parent"
  			android:layout_alignParentTop="true"
  			android:layout_height="45dp"
  			android:background="#ffdddddd"
  			android:gravity="center_horizontal|center_vertical"  >  
			<TextView
			 		android:layout_width="wrap_content" 
			  		android:layout_height="wrap_content" 
			  		android:text="@string/app_eval_detail"
			   		android:textSize="20sp"		
					android:textColor="#ffff0000" />       
	</LinearLayout>
    
    <ScrollView
        android:id="@+id/mapp_eval_more_sV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mapp_eval_title"
        android:layout_above="@id/mapp_eval_main_layout" >

        <LinearLayout
        	android:id="@+id/mapp_eval_more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mapp_eval_more_tV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
